# em-tool

./: .gitignore  FINISHING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-04-22-foundation.md  2026-04-23-capture-and-viewing.md  2026-04-23-meetings-and-generator.md
docs/superpowers/specs/: 2026-04-22-em-tool-design.md
src/: App.vue  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: action_items.rs  commands.rs  db.rs  kdf.rs  lib.rs  main.rs  migrations.rs  one_on_ones.rs  performance_reviews.rs  plan_generation.rs  reports.rs  secure_settings.rs  state.rs  vault.rs  week_ratings.rs
src/components/: ActionItemList.vue  AddReportModal.vue  AppSidebar.vue  ColorStrip.vue  ColorSwatches.test.ts  ColorSwatches.vue  ConfirmModal.vue  LogOneOnOneModal.vue  LogReviewModal.vue  WeekNav.vue
src/composables/: useCurrentWeek.ts
src/lib/: colors.ts  idle-timer.test.ts  idle-timer.ts  invoke.ts  iso-week.test.ts  iso-week.ts
src/stores/: action-items.ts  generated-plans.ts  one-on-ones.ts  reports.ts  reviews.ts  vault.ts  week-ratings.ts
src/types/: action-item.ts  generated-plan.ts  one-on-one.ts  performance-review.ts  report.ts  week-rating.ts
src/views/: OnboardingView.vue  PlanGeneratorView.vue  ReportTimelineView.vue  ReportsView.vue  SettingsView.vue  TeamHeatmapView.vue  UnlockView.vue  WeeklyCaptureView.vue
